fix: image changed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     ></script>
     
 
-    <title>Responsive Portfilo website | Taleh Rzayev</title>
+    <title>Thaw Ko Zin</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -31,7 +31,7 @@
         <div class="section1">
           <div class="head-img">
             <img
-              src="https://avatars.githubusercontent.com/u/70813725?v=4"
+              src="https://i1.sndcdn.com/artworks-U3AySqLFQSRpSzF5-FgUe3g-t500x500.jpg"
               alt=""
             />
           </div>
