changed copyright name

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <a href="#"><img src="/img/linkedin.svg" alt="" />
         </a>
       </div>
-      <p>Copyright © 2022 All rights reserved <br><br> <b> ©Taleh Rzayev </b></p>
+      <p>Copyright © 2024 All rights reserved <br><br> <b> ©Thaw_Ko_Zin </b></p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
