linked facebook account

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </section>
     <footer>
       <div class="social-buttons">
-        <a href="#"><img src="/img/fb.svg" alt="" />
+        <a href="https://www.facebook.com/thawko.zin.3/"><img src="/img/fb.svg" alt="facebook" />
         </a>
         <a href="#"><img src="/img/insta.svg" alt="" />
         </a>
